add seção 4 Angular

--- a/src/pages/angular/ngclass/ngclass.scss
+++ b/src/pages/angular/ngclass/ngclass.scss
@@ -1,3 +1,14 @@
 page-ngclass {
+    .bold {
+        font-weight: bolder;
+    }
+
+    .font-red {
+        color: red;
+    }
+
+    .italic {
+        font-style: italic;
+    }
 
 }
