--- a/src/pages/components/action-sheet/action-sheet.html
+++ b/src/pages/components/action-sheet/action-sheet.html
@@ -14,5 +14,5 @@
 
 
 <ion-content padding>
-
+    <button ion-button round (click)="apresentarActionSheet()">Apresentar Action Sheet</button>
 </ion-content>
