--- a/src/pages/components/alert/alert.html
+++ b/src/pages/components/alert/alert.html
@@ -14,5 +14,13 @@
 
 
 <ion-content padding>
-
+    <button ion-button round (click)="mostrarAlertaBasico()">Alerta Básico</button>
+    <br>
+    <button ion-button round (click)="mostrarAlertPrompt()">Alerta Prompt</button>
+    <br>
+    <button ion-button round (click)="mostrarAlertaConfirm()">Alerta Confirmação</button>
+    <br>
+    <button ion-button round (click)="mostrarAlertaRadio()">Alerta Radio</button>
+    <br>
+    <button ion-button round (click)="mostrarAlertaCheckbox()">Alerta Checkbox</button>
 </ion-content>
