--- a/src/pages/components/buttons/buttons.html
+++ b/src/pages/components/buttons/buttons.html
@@ -13,6 +13,29 @@
 </ion-header>
 
 
-<ion-content padding>
-
+<ion-content>
+    <button ion-button color="gold">Ionic</button>
+    <br>
+    <button ion-button full>Full</button>
+    <button ion-button block>Block</button>
+    <button ion-button round>Round</button>
+    <br>
+    <button ion-button outline round>Outline</button>
+    <button ion-button clear>Clear</button>
+    <br>
+    <button ion-button icon-start>
+        <ion-icon name="star"></ion-icon>
+        Icone
+    </button>
+    <button ion-buton icon-end>
+        Icone
+        <ion-icon name="star"></ion-icon>
+    </button>
+    <button ion-button icon-only>
+        <ion-icon name="star"></ion-icon>
+    </button>
+    <br>
+    <button ion-button full large>Full Large</button>
+    <button ion-button block>Block</button>
+    <button ion-button round small>Round Small</button>
 </ion-content>
