--- a/src/pages/components/grid/grid.html
+++ b/src/pages/components/grid/grid.html
@@ -14,5 +14,25 @@
 
 
 <ion-content padding>
+    <ion-grid>
+        <ion-row>
+            <ion-col col-2>col 1</ion-col>
+            <ion-col col-8>col 2</ion-col>
+            <ion-col col-2>col 3</ion-col>
+        </ion-row>
+        <ion-row wrap-reverse>
+            <ion-col col-12 col-sm-6 col-md-8 col-lg-4 col-xl-2>col 1</ion-col>
+            <ion-col col-12 col-sm-6 col-md-8 col-lg-4 col-xl-2>col 2</ion-col>
+            <ion-col col-12 col-lg-4 col-xl-6>col 2</ion-col>
+        </ion-row>
+        <!--
+            col-BR-*
+            xs:0 - 575px;
+            sm: 576px ~ 767px;
+            md: 768px ~ 991px;
+            lg: 992px ~ 1199px;
+            xl: 1200px ~ ...
+        -->
+    </ion-grid>
 
 </ion-content>
