--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,10 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+.meu-toast {
+    .toast-container {
+        background-color: red;
+        color: white
+    }
+}
