--- a/src/pages/components/cards/cards.scss
+++ b/src/pages/components/cards/cards.scss
@@ -1,3 +1,25 @@
 page-cards {
 
+    #card-imagem {
+        position: relative;
+        text-align: center;
+    }
+
+    .titulo-card {
+        position: absolute;
+        top: 36%;
+        font-size: 3rem; //html: em = 14px; 3* 14 = 42px;
+        width: 100%;
+        font-weight: bold;
+        color: white;
+    }
+
+    .subtitulo-card {
+        position: absolute;
+        font-size: 1.5rem;
+        width: 100%;
+        color: white;
+        top: 50%;
+    }
+
 }
