--- a/src/pages/components/menus/menus.html
+++ b/src/pages/components/menus/menus.html
@@ -1,18 +1,35 @@
-<!--
-  Generated template for the MenusPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
+<ion-split-pane when="(min-width: 1000px)">
+  <!-- ATRIBUTOS E EVENTOS DO MENU -->
+  <!-- type="reveal | push | overlay" (ionClose)="" (ionDrag)="" (ionOpen)="" 
+    enable="true" persistent="true" swipeEnabled="false" type="reveal"
+  -->
+  <ion-menu [content]="conteudo" side="left">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Menus...</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-list>
+        <button ion-item *ngFor="let item of itens" (click)="irPagina(item.componente)">{{ item.titulo }}</button>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+  <ion-header>
 
     <ion-navbar>
-        <ion-title>Menus</ion-title>
+      <ion-title>Menus</ion-title>
+      <ion-buttons right>
+        <button ion-button clear icon-only menuToggle>
+          <ion-icon name="menu"></ion-icon>
+        </button>
+      </ion-buttons>
     </ion-navbar>
 
-</ion-header>
+  </ion-header>
 
 
-<ion-content padding>
-
-</ion-content>
+  <ion-content #conteudo main>
+    <h1 text-center>Minha pagina de menu.</h1>
+  </ion-content>
+</ion-split-pane>
