--- a/src/pages/components/popover/popover.html
+++ b/src/pages/components/popover/popover.html
@@ -8,6 +8,11 @@
 
     <ion-navbar>
         <ion-title>Popover</ion-title>
+        <ion-buttons right>
+          <button ion-button clear icon-only (tap)="chamarPopover($event)">
+            <ion-icon name="more"></ion-icon>
+          </button>
+        </ion-buttons>
     </ion-navbar>
 
 </ion-header>
