--- a/src/pages/components/segment/segment.html
+++ b/src/pages/components/segment/segment.html
@@ -6,13 +6,35 @@
 -->
 <ion-header>
 
-    <ion-navbar>
-        <ion-title>Segment</ion-title>
-    </ion-navbar>
-
+  <ion-navbar>
+    <ion-title>Segment</ion-title>
+  </ion-navbar>
+  <ion-segment [(ngModel)]="roupa">
+    <ion-segment-button value="masculino" (ionSelect)="printar('masculino')">
+      Masculino
+    </ion-segment-button>
+    <ion-segment-button value="feminino" (ionSelect)="printar('feminino')">
+      Feminino
+    </ion-segment-button>
+  </ion-segment>
 </ion-header>
 
 
 <ion-content padding>
+  <div [ngSwitch]="roupa">
+    <ion-list *ngSwitchCase="'masculino'">
+      <ion-list-header>
+        MASCULINO
+      </ion-list-header>
+      <ion-item>CAMISA</ion-item>
+    </ion-list>
 
+    <ion-list *ngSwitchCase="'feminino'">
+      <ion-list-header>
+        FEMININO
+      </ion-list-header>
+      <ion-item>SAIA</ion-item>
+    </ion-list>
+    <h3 *ngSwitchDefault text-center>Escolha uma opção</h3>
+  </div>
 </ion-content>
