--- a/src/pages/components/header/header.html
+++ b/src/pages/components/header/header.html
@@ -6,9 +6,12 @@
 -->
 <ion-header>
 
-    <ion-navbar>
-        <ion-title>Header</ion-title>
-    </ion-navbar>
+  <ion-navbar [hideBackButton]="showNavbar">
+    <ion-title>Header</ion-title>
+  </ion-navbar>
+  <ion-toolbar>
+    <ion-title>Subheader</ion-title>
+  </ion-toolbar>
 
 </ion-header>
 
