--- a/src/pages/components/infinite-scroll/infinite-scroll.html
+++ b/src/pages/components/infinite-scroll/infinite-scroll.html
@@ -14,5 +14,13 @@
 
 
 <ion-content padding>
-
+  <ion-list>
+    <ion-item *ngFor="let item of itens">{{item}}</ion-item>
+  </ion-list>
+  <ion-infinite-scroll (ionInfinite)="carregarMais($event)" threshold="20px">
+    <ion-infinite-scroll-content
+      loadingSpinner="bubbles"
+      loadingText="Carregando mais..."
+    ></ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 </ion-content>
