--- a/src/pages/components/refresher/refresher.html
+++ b/src/pages/components/refresher/refresher.html
@@ -6,13 +6,31 @@
 -->
 <ion-header>
 
-    <ion-navbar>
-        <ion-title>Refresher</ion-title>
-    </ion-navbar>
+  <ion-navbar>
+    <ion-title>Refresher</ion-title>
+  </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
+<ion-content>
+  <ion-refresher (ionRefresh)="buscaDados($event)"
+    closeDuration="1000" (ionPull)="manipulaTexto($event)"
+    pullMin="100"
+    pullMax="200"
+    snapBackDuration="1000">
+    <ion-refresher-content
+      pullingIcon="add"
+      [pullingText]="texto"
+      refreshingSpinner="circles"
+      refreshingText="Carregando mais..."
+    ></ion-refresher-content>
+  </ion-refresher>
+
+  <ion-list>
+    <ion-item *ngFor="let item of itens">
+      {{item}}
+    </ion-item>
+  </ion-list>
 
 </ion-content>
