--- a/src/pages/components/lists/lists.html
+++ b/src/pages/components/lists/lists.html
@@ -13,7 +13,7 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding (ionScroll)="onScroll($event)" (ionScrollStart)="scrollStart()" (ionScrollEnd)="scrollEnd()">
   <!-- lista básica-->
   <ion-list>
     <ion-item *ngFor="let i of [0,1,2,3]">Teste</ion-item>
